--- a/thinkcmf-5.0.180626/public/themes/RY/icr/home.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/home.html
@@ -87,7 +87,7 @@
             </div>
             <div class="adv-item">
                 <div class="adv-item-img"><img src="/themes/RY/icr/imgs/adv-4-img.svg"></div>
-                <div class="adv-item-p">小班教学不超过8人<br/>让每一个孩子都得到足够<br>的关照</div>
+                <div class="adv-item-p">小班教学不超过8人<br/>让每一个孩子都得到足够的关照</div>
             </div>
         </div>
     </div>
@@ -168,13 +168,13 @@
         "<div class='course-level'>" +
         "<select>" +
         "<option  hidden selected>预约试听课程级别</option>" +
-        "<option>{$category_list[0]['name']}初级课程适合2.5 ～ 7岁</option>" +
-        "<option>{$category_list[1]['name']}中级课程适合5 ～ 10岁</option>" +
-        "<option>{$category_list[2]['name']}⾼级课程适合8 ～14岁</option>" +
+        "<option>{$category_list[0]['name']}课程适合2.5 ～ 7岁</option>" +
+        "<option>{$category_list[1]['name']}课程适合5 ～ 10岁</option>" +
+        "<option>{$category_list[2]['name']}课程适合8 ～14岁</option>" +
         "</select>" +
         "<i class='fa fa-caret-down fa-2x'></i></div>"+
-        "<input type='text' placeholder='输入手机号预约课程试听' />" +
-        "<input type='submit' value='确认预约试听'>" +
+        "<input type='text' name='mobile_no' placeholder='输入手机号预约课程试听' />" +
+        "<input type='submit' onclick='yuyue(this)' value='确认预约试听'>" +
         "</div>" +
         "</form>" +
         "<div class='cease'>&times;</div>" +
@@ -184,6 +184,24 @@
 <include file="../public/themes/RY/icr/foot.html" />
 <script type="text/javascript">
     // 百度地图API功能
+    function yuyue(obj){
+        var phone =$(obj).nextAll("[name='mobile_no']").val();
+        if(!phone){
+            alert('请填写手机号');
+        }
+        $.ajax({
+            'url':"{:url('course/bookCourse')}",
+            // 'data':{'name':phone_number,
+            //     'describe':phone_number,
+            //     'level':1,
+            //     'goal':phone_number,},
+            'data':{'phone':phone,},
+            'success':function(e){
+                alert("预约成功！")
+            }
+        })
+        return false;
+    }
     function mapini(city){
         //获取校区列表
         var school_list = null;
