--- a/thinkcmf-5.0.180626/public/themes/RY/icr/teachers.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/teachers.html
@@ -6,6 +6,7 @@
 <div class="main">
     <php class="item">
         <div class="teachers">
+            <h1>优质师资</h1>
             <div class="clear"></div>
             <div class="teacher-list">
                 <php>$j=0;</php>
