--- a/thinkcmf-5.0.180626/public/themes/RY/icr/about.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/about.html
@@ -1,7 +1,7 @@
 <include file="../public/themes/RY/icr/head.html" />
 <!--#include virtual="./head.html" -->
 <div class="main-img">
-    <img src="/themes/RY/icr/imgs/banner2.jpg" />
+    <img src="/themes/RY/icr/imgs/banner7.jpg" />
 </div>
 <div class="main">
     <div class="item">
@@ -67,7 +67,7 @@
             </div>
             <div class="about-item">
                 <img src="/themes/RY/icr/imgs/contact_img2.svg" />
-                <div class="text"><a id="join">合作加盟</a></div>
+                <div class="text">合作加盟</div>
             </div>
             <div class="about-item">
                 <img src="/themes/RY/icr/imgs/contact_img3.svg" />
