--- a/thinkcmf-5.0.180626/public/themes/RY/icr/about.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/about.html
@@ -6,7 +6,7 @@
 <div class="main">
     <div class="item">
         <div class="about">
-            <h1>什么是I Can Read</h1>
+            <h1>什么是&nbsp;&nbsp;<span style="font-family: PlutoSans">I Can Read</span></h1>
             <div class="about-content">
               <p> 故事的开端，要从I Can Read创始人Earnshaw说起。Earnshaw的孩子被诊断患有阅读障碍，学校应试的教育环境让Earnshaw的家庭饱受煎熬。</p>
 
@@ -41,7 +41,7 @@
                         独特教学方法
                     </div>
                     <div class="bg-item-desc">
-                        I Can Read 使用专有的编码系统 全球第一个以独特方式串联声音与字母簇的阅读学习系统 利用视觉线索来辅助语言学习
+                        基于学员个别语⾔能⼒以学员个别进度为重点结构化和渐进试教学法寓教于乐，以活动为教学中⼼
                     </div>
                 </div>
                 <div class="bg-item">
@@ -52,7 +52,7 @@
                         独特教学方法
                     </div>
                     <div class="bg-item-desc">
-                        I Can Read 使用专有的编码系统 全球第一个以独特方式串联声音与字母簇的阅读学习系统 利用视觉线索来辅助语言学习
+                        可以准确地发⾳，有信⼼地表达⾃⼰更容易地掌握各类知识提升书写能⼒，提⾼考试成绩
                     </div>
                 </div>
             </div>
