--- a/thinkcmf-5.0.180626/public/themes/RY/icr/course.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/course.html
@@ -80,6 +80,7 @@
                 <h1>家长评语</h1>
                 <div class="h2">听一听小朋友的家长们都说了些什么</div>
                 <div class="radios">
+                    <div class="img-list">
                     <volist name="feedback_video" id="vo" length="4">
                         <div class="radios-item">
                             <div class="img"><img src=<?=$vo['icon']?> /></div>
@@ -87,25 +88,33 @@
                             <div class="click" data-video="{$vo['content']}"><i class="fa fa-play-circle-o"></i></div>
                         </div>    
                     </volist>
+                    </div>
+                    <div class="img-left"><i class="fa fa-angle-left"></i></div>
+                    <div class="img-right"><i class="fa fa-angle-right"></i></div>
+                    <div class="clear"></div>
                 </div>
             </div>
         </div>
         <div class="item">
             <div class="study">
-                <div class="h2">看一看小朋友们在I Can Read 都学到了些什么</div>
+                <div class="h2">看一看小朋友们在&nbsp;&nbsp;<span style="font-family: PlutoSans">I Can Read</span> 都学到了些什么</div>
                 <div class="comment">
-                    <volist name="feedback_text" id="vo" length="3">
-                        <div class="comment-item">
-                            <div class="img"><img src="<?=$vo['icon']?>" /></div>
-                            <div class="title"><?=$vo['title']?></div>
-                            <div class="click">
-                                <div class="click-title"><?=$vo['title']?></div>
-                                <div class="click-content">
-                                    <?=$vo['content']?>
+                    <div class="img-list">
+                        <volist name="feedback_text" id="vo" length="3">
+                            <div class="comment-item">
+                                <div class="img"><img src="<?=$vo['icon']?>" /></div>
+                                <div class="title"><?=$vo['title']?></div>
+                                <div class="click">
+                                    <div class="click-title"><?=$vo['title']?></div>
+                                    <div class="click-content">
+                                        <?=$vo['content']?>
+                                    </div>
                                 </div>
                             </div>
-                        </div>    
-                    </volist>
+                        </volist>
+                    </div>
+                    <div class="img-left"><i class="fa fa-angle-left"></i></div>
+                    <div class="img-right"><i class="fa fa-angle-right"></i></div>
                     <div class="clear"></div>
                 </div>
             </div>
