--- a/thinkcmf-5.0.180626/public/themes/RY/icr/foot.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/foot.html
@@ -50,49 +50,49 @@
                     <li>
                         <div>
                             <img src="/themes/RY/icr/imgs/hk-flag.svg" />
-                            <span>Hong Kong SAR</span>
+                            <span style="font-family: PlutoSans">Hong Kong SAR</span>
                             <span>中国香港官网</span>
                         </div>
                     </li>
                     <li>
                         <div>
                             <img src="/themes/RY/icr/imgs/indonesia-flag.svg" />
-                            <span>Indonesia</span>
+                            <span style="font-family: PlutoSans">Indonesia</span>
                             <span>印度尼西亚官网</span>
                         </div>
                     </li>
                     <li>
                         <div>
                             <img src="/themes/RY/icr/imgs/malaysia-flag.svg" />
-                            <span>Malaysia</span>
+                            <span style="font-family: PlutoSans">Malaysia</span>
                             <span>马来西亚官网</span>
                         </div>
                     </li>
                     <li>
                         <div>
                             <img src="/themes/RY/icr/imgs/myanmar-flag.svg" />
-                            <span>Myanmar</span>
-                            <span>缅甸管网</span>
+                            <span style="font-family: PlutoSans">Myanmar</span>
+                            <span>缅甸官网</span>
                         </div>
                     </li>
                     <li>
                         <div>
                             <img src="/themes/RY/icr/imgs/singapore-flag.svg" />
-                            <span>Singapore</span>
+                            <span style="font-family: PlutoSans">Singapore</span>
                             <span>新家坡官网</span>
                         </div>
                     </li>
                     <li>
                         <div>
                             <img src="/themes/RY/icr/imgs/thailand-flag.svg" />
-                            <span>Thailand</span>
+                            <span style="font-family: PlutoSans">Thailand</span>
                             <span>印度官网</span>
                         </div>
                     </li>
                     <li>
                         <div>
                             <img src="/themes/RY/icr/imgs/vietnam-flag.svg" />
-                            <span>Vietnam</span>
+                            <span style="font-family: PlutoSans">Vietnam</span>
                             <span>越南官网</span>
                         </div>
                     </li>
@@ -141,8 +141,8 @@
         <div class="country-row">
             <div class="country-item">
                 <img src="/themes/RY/icr/imgs/myanmar-flag.svg" />
-                <span>Myanmar</span>
-                <span>缅甸管网</span>
+                <span style="font-family: PlutoSans">Myanmar</span>
+                <span>缅甸官网</span>
             </div>
             <div class="country-item">
                 <img src="/themes/RY/icr/imgs/myanmar-flag.svg" />
@@ -157,40 +157,12 @@
             <div class="country-item">
                 <img src="/themes/RY/icr/imgs/myanmar-flag.svg" />
                 <span>Australia</span>
-                <span>缅甸管网</span>
+                <span>缅甸官网</span>
             </div>
             <div class="country-item">
                 <img src="/themes/RY/icr/imgs/myanmar-flag.svg" />
                 <span>Australia</span>
-                <span>缅甸管网</span>
-            </div>
-        </div>
-        <div class="clear"></div>
-        <div class="country-row">
-            <div class="country-item">
-                <img src="/themes/RY/icr/imgs/myanmar-flag.svg" />
-                <span>Australia</span>
-                <span>缅甸管网</span>
-            </div>
-            <div class="country-item">
-                <img src="/themes/RY/icr/imgs/myanmar-flag.svg" />
-                <span>Australia</span>
-                <span>缅甸管网</span>
-            </div>
-            <div class="country-item">
-                <img src="/themes/RY/icr/imgs/myanmar-flag.svg" />
-                <span>Australia</span>
-                <span>缅甸管网</span>
-            </div>
-            <div class="country-item">
-                <img src="/themes/RY/icr/imgs/myanmar-flag.svg" />
-                <span>Australia</span>
-                <span>缅甸管网</span>
-            </div>
-            <div class="country-item">
-                <img src="/themes/RY/icr/imgs/myanmar-flag.svg" />
-                <span>Australia</span>
-                <span>缅甸管网</span>
+                <span>缅甸官网</span>
             </div>
         </div>
         <div class="clear"></div>
@@ -198,27 +170,55 @@
             <div class="country-item">
                 <img src="/themes/RY/icr/imgs/myanmar-flag.svg" />
                 <span>Australia</span>
-                <span>缅甸管网</span>
+                <span>缅甸官网</span>
             </div>
             <div class="country-item">
                 <img src="/themes/RY/icr/imgs/myanmar-flag.svg" />
                 <span>Australia</span>
-                <span>缅甸管网</span>
+                <span>缅甸官网</span>
             </div>
             <div class="country-item">
                 <img src="/themes/RY/icr/imgs/myanmar-flag.svg" />
                 <span>Australia</span>
-                <span>缅甸管网</span>
+                <span>缅甸官网</span>
             </div>
             <div class="country-item">
                 <img src="/themes/RY/icr/imgs/myanmar-flag.svg" />
                 <span>Australia</span>
-                <span>缅甸管网</span>
+                <span>缅甸官网</span>
             </div>
             <div class="country-item">
                 <img src="/themes/RY/icr/imgs/myanmar-flag.svg" />
                 <span>Australia</span>
-                <span>缅甸管网</span>
+                <span>缅甸官网</span>
+            </div>
+        </div>
+        <div class="clear"></div>
+        <div class="country-row">
+            <div class="country-item">
+                <img src="/themes/RY/icr/imgs/myanmar-flag.svg" />
+                <span>Australia</span>
+                <span>缅甸官网</span>
+            </div>
+            <div class="country-item">
+                <img src="/themes/RY/icr/imgs/myanmar-flag.svg" />
+                <span>Australia</span>
+                <span>缅甸官网</span>
+            </div>
+            <div class="country-item">
+                <img src="/themes/RY/icr/imgs/myanmar-flag.svg" />
+                <span>Australia</span>
+                <span>缅甸官网</span>
+            </div>
+            <div class="country-item">
+                <img src="/themes/RY/icr/imgs/myanmar-flag.svg" />
+                <span>Australia</span>
+                <span>缅甸官网</span>
+            </div>
+            <div class="country-item">
+                <img src="/themes/RY/icr/imgs/myanmar-flag.svg" />
+                <span>Australia</span>
+                <span>缅甸官网</span>
             </div>
         </div>
     </div>
