--- a/thinkcmf-5.0.180626/public/themes/RY/icr/home.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/home.html
@@ -53,13 +53,13 @@
             <h1>课程级别</h1>
             <div class="h2">
                 <div class="_"></div>
-                <div class="content">Course Level</div>
+                <div class="content"><span style="font-family: PlutoSans">Course Level</span></div>
                 <div class="_ right"></div>
             </div>
             <div class="h3">
-                <p>初级课程ICR Discover 1 ~ 3</p>
-                <p>中级课程ICR Level 1 ~ 6</p>
-                <p>高级课程ICR Plus 1 ~ 4</p>
+                <p>初级课程  <span style="font-family: PlutoSans">ICR Discover 1 ~ 3</span></p>
+                <p>中级课程  <span style="font-family: PlutoSans">ICR Level 1 ~ 6</span></p>
+                <p>高级课程  <span style="font-family: PlutoSans">ICR Plus 1 ~ 4</span></p>
             </div>
             <img src="/themes/RY/icr/imgs/course-img.svg">
             <div class="course-more">
@@ -120,7 +120,7 @@
             <h1>学习中心</h1>
             <div class="h2">
                 <div class="_"></div>
-                <div class="content">Our Centre</div>
+                <div class="content"><span style="font-family: PlutoSans">Our Centre</span></div>
                 <div class="_ right"></div>
             </div>
             <div class="map-show">
