--- a/thinkcmf-5.0.180626/public/themes/RY/icr/school.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/school.html
@@ -86,7 +86,7 @@
             map.centerAndZoom(point, 12);
         });
     }
-    mapini('厦门');
+    mapini('{$city_name}');
 </script>
 <include file="../public/themes/RY/icr/foot.html" />
 <!--#include virtual="./foot.html" -->
