--- a/thinkcmf-5.0.180626/public/themes/RY/icr/course.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/course.html
@@ -26,9 +26,9 @@
     <div class="item">
         <div class="tab">
             <div class="tab-content">
-                <div class="<?=$level_class[0]?>" id="level1" onclick="searchLevel(this)">初级课程ICR Discover 1 ~ 3</div>
-                <div class="<?=$level_class[1]?>" id="level2" onclick="searchLevel(this)">中级课程ICR Level 1 ~ 6</div>
-                <div class="<?=$level_class[2]?>" id="level3" onclick="searchLevel(this)">高级课程ICR Plus 1 ~ 4</div>
+                <div class="<?=$level_class[0]?>" id="level1" onclick="searchLevel(this)">初级课程&nbsp;&nbsp;ICR Discover 1 ~ 3</div>
+                <div class="<?=$level_class[1]?>" id="level2" onclick="searchLevel(this)">中级课程&nbsp;&nbsp;ICR Level 1 ~ 6</div>
+                <div class="<?=$level_class[2]?>" id="level3" onclick="searchLevel(this)">高级课程&nbsp;&nbsp;ICR Plus 1 ~ 4</div>
             </div>
         </div>
         <div class="item">
