--- a/thinkcmf-5.0.180626/public/themes/RY/icr/school.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/school.html
@@ -51,12 +51,34 @@
     </div>
 </div>
 <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=s0x1Cj9VeZ6bVRI249olQM0V"></script>
+<script type="text/javascript" src="http://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.js"></script>
+<link rel="stylesheet" href="http://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.css" />
 <script type="text/javascript">
     function mapini(city){
         //获取校区列表
         var school_list = null;
-        function addMarker(point){
+        function addMarker(point,data){
             var marker = new BMap.Marker(point);
+            var searchInfoWindow =null;
+            var content = '<div style="margin:0;line-height:20px;padding:2px;">' +
+                '<img src="/themes/RY/icr/imgs/map.jpg" alt="" style="float:right;zoom:1;overflow:hidden;width:100px;height:100px;margin-left:3px;"/>' +
+                '地址：' +data.position+
+                '</div>';
+            searchInfoWindow=new BMapLib.SearchInfoWindow(map, content, {
+                title  : data.name,      //标题
+                width  : 290,             //宽度
+                height : 105,              //高度
+                panel  : "panel",         //检索结果面板
+                enableAutoPan : true,     //自动平移
+                searchTypes   :[
+                    BMAPLIB_TAB_SEARCH,   //周边检索
+                    BMAPLIB_TAB_TO_HERE,  //到这里去
+                    BMAPLIB_TAB_FROM_HERE //从这里出发
+                ]
+            });
+            marker.addEventListener("click",function(e){
+                searchInfoWindow.open(marker);
+            })
             map.addOverlay(marker);
         }
         function editInfo(data){
@@ -79,7 +101,7 @@
                 if(e.data[i]['coordinate']){
                     var pint = e.data[i]['coordinate'].split(',');
                     var point = new BMap.Point(pint[0],pint[1]);
-                    addMarker(point)
+                    addMarker(point,{name:e.data[i]['name'],position:e.data[i]['location']})
                 }
                 editInfo(e.data[i]);
             }
