--- a/thinkcmf-5.0.180626/public/themes/RY/icr/teachers.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/teachers.html
@@ -23,7 +23,12 @@
                                 {$vo['name']}
                             </div>
                             <div class="detail_content">
-                                {$vo['resume']}
+                                <div class="resume">
+                                    {$vo['resume']}
+                                </div>
+                                <div class="ll">
+                                    {$vo['idea']}
+                                </div>
                             </div>
                         </div>
                     </div>
