--- a/thinkcmf-5.0.180626/public/themes/RY/icr/head.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/head.html
@@ -42,7 +42,7 @@
                 <li class="{$teacher_active}" onclick="{location='{:url(\'/icr/teacher\')}'}">优质师资</li>
                 <li class="{$school_active}" onclick="{location='{:url(\'/icr/school\')}'}">校区风采</li>
                 <li class="{$recruit_active}" onclick="{location='{:url(\'/icr/recruit\')}'}">人才招聘</li>
-                <li class="{$join_active}" onclick="{location='{:url(\'/icr/join\')}'}">合作加盟</li>
+                <!--<li class="{$join_active}" onclick="{location='{:url(\'/icr/join\')}'}">合作加盟</li>-->
                 <li class="{$about_active}" onclick="{location='{:url(\'/icr/about\')}'}">关于我们</li>
             </ul>
         </div>
