--- a/thinkcmf-5.0.180626/public/themes/icr_wap/icr/foot.html
+++ b/thinkcmf-5.0.180626/public/themes/icr_wap/icr/foot.html
@@ -17,17 +17,16 @@
 <footer id="footer">
     <div class="foot-menu">
         <ul>
-            <a href="{:url('/icr/course')}"><li>课程内容</li></a>
-            <a href="{:url('/icr/teacher')}"><li>优质师资</li></a>
-            <a href="{:url('/icr/school')}"><li>校区风采</li></a>
+            <a href="{:url('icr/course')}"><li>课程内容</li></a>
+            <a href="{:url('icr/teacher')}"><li>优质师资</li></a>
+            <a href="{:url('icr/school')}"><li>校区环境</li></a>
             <li id="foot_menu_more" class="li-last">更多服务</li>
         </ul>
     </div>
     <div class="foot-more">
         <ul>
-            <a href="{:url('/icr/recruit')}"><li>人才招聘</li></a>
-            <a href="{:url('/icr/join')}"><li>合作加盟</li></a>
-            <a href="{:url('/icr/about')}"><li class="li-last">关于我们</li></a>
+            <a href="{:url('icr/recruit')}"><li>人才招聘</li></a>
+            <a href="{:url('icr/about')}"><li class="li-last">关于我们</li></a>
         </ul>
         <div class="triangle"></div>
     </div>
